<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.frederickodaso.footballgamecounter.MainActivity"
    android:background="#66BB6A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/colorScore"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"/>

            <Button
                android:text="@string/touchdown"
                android:onClick="touchdownPointsA"
                style="@style/CustomButtonStyle"/>

            <Button
                android:text="@string/twoPointConversion"
                android:onClick="twoPointConversionPointsA"
                style="@style/CustomButtonStyle"/>

            <Button
                android:text="@string/safety"
                android:onClick="safetyPointsA"
                style="@style/CustomButtonStyle"/>

            <Button
                android:text="@string/field_goal"
                android:onClick="fieldGoalPointsA"
                style="@style/CustomButtonStyle"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/colorScore"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"/>


            <Button
                android:text="@string/touchdown"
                android:onClick="touchdownPointsB"
                style="@style/CustomButtonStyle"/>

            <Button
                android:text="@string/twoPointConversion"
                android:onClick="twoPointConversionPointsB"
                style="@style/CustomButtonStyle"/>

            <Button
                android:text="@string/safety"
                android:onClick="safetyPointsB"
                style="@style/CustomButtonStyle"/>

            <Button
                android:text="@string/field_goal"
                android:onClick="fieldGoalPointsB"
                style="@style/CustomButtonStyle"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:onClick="resetPoints"/>
    </RelativeLayout>

</LinearLayout>
